--- a/common-base-starter/pom.xml
+++ b/common-base-starter/pom.xml
@@ -21,6 +21,10 @@
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-validation</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.bremersee</groupId>
       <artifactId>common-base-autoconfigure</artifactId>
       <version>${project.version}</version>
