--- a/common-base-web-starter/pom.xml
+++ b/common-base-web-starter/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.2.0-SNAPSHOT</version>
+    <version>2.2.0</version>
   </parent>
 
   <artifactId>common-base-web-starter</artifactId>
