--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>common-base-parent</artifactId>
-  <version>2.2.2-SNAPSHOT</version>
+  <version>2.2.2</version>
   <packaging>pom</packaging>
 
   <name>common-base-parent</name>
@@ -49,7 +49,7 @@
     <github.repo>common-base</github.repo>
     <!--suppress UnresolvedMavenProperty -->
     <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
-    <common-model.version>2.1.0</common-model.version>
+    <common-model.version>2.1.1</common-model.version>
   </properties>
 
   <scm>
