--- a/common-base-security-starter/pom.xml
+++ b/common-base-security-starter/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.2.3-SNAPSHOT</version>
+    <version>2.2.3</version>
   </parent>
 
   <artifactId>common-base-security-starter</artifactId>
