--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>2.1.5</version>
+    <version>2.2.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
@@ -50,9 +50,6 @@
     <!--suppress UnresolvedMavenProperty -->
     <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
     <common-model.version>2.1.1</common-model.version>
-
-    <!-- TODO: remove after merge -->
-    <minio.version>8.0.1</minio.version>
   </properties>
 
   <scm>
