--- a/common-base-security/pom.xml
+++ b/common-base-security/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.3.1</version>
+    <version>2.3.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-base-security</artifactId>
