--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>2.2.5-SNAPSHOT</version>
+    <version>2.2.5</version>
     <relativePath/>
   </parent>
 
@@ -50,7 +50,7 @@
     <github.repo>common-base</github.repo>
     <!--suppress UnresolvedMavenProperty -->
     <gh-pages-staging-dir>${maven.multiModuleProjectDirectory}/target/staging</gh-pages-staging-dir>
-    <common-model.version>2.2.0</common-model.version>
+    <common-model.version>2.2.1</common-model.version>
   </properties>
 
   <scm>
