--- a/common-base-actuator-starter/pom.xml
+++ b/common-base-actuator-starter/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.3.2-SNAPSHOT</version>
+    <version>2.3.2</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
