--- a/common-base-autoconfigure/pom.xml
+++ b/common-base-autoconfigure/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <artifactId>common-base-parent</artifactId>
     <groupId>org.bremersee</groupId>
-    <version>2.3.3-SNAPSHOT</version>
+    <version>2.4.0-SNAPSHOT</version>
   </parent>
 
   <artifactId>common-base-autoconfigure</artifactId>
@@ -106,10 +106,17 @@
       <optional>true</optional>
     </dependency>
     <dependency>
+      <groupId>com.github.codemonstur</groupId>
+      <artifactId>embedded-redis</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <!--
+    <dependency>
       <groupId>it.ozimov</groupId>
       <artifactId>embedded-redis</artifactId>
       <optional>true</optional>
     </dependency>
+    -->
 
     <dependency>
       <groupId>org.projectlombok</groupId>
