--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,17 @@
   <parent>
     <groupId>org.bremersee</groupId>
     <artifactId>common-parent</artifactId>
-    <version>2.3.1</version>
+    <version>2.4.0-SNAPSHOT</version>
     <relativePath/>
   </parent>
 
   <artifactId>common-base-parent</artifactId>
-  <version>2.3.4-SNAPSHOT</version>
+  <version>2.4.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>common-base-parent</name>
   <description>Common Base Parent</description>
+  <inceptionYear>2019</inceptionYear>
   <url>https://github.com/bremersee/common-base</url>
 
   <modules>
@@ -54,7 +55,7 @@
     <!-- see https://www.eclemma.org/jacoco/trunk/doc/prepare-agent-mojo.html -->
     <argLine>-Dorg.bremersee.test.executor=NOT_SPECIFIED</argLine>
 
-    <common-model.version>2.3.1</common-model.version>
+    <common-model.version>2.4.0-SNAPSHOT</common-model.version>
   </properties>
 
   <developers>
